# nannou-manager

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  release-artifacts.yml  release-plz.yml
crates/cli/: CHANGELOG.md  Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli.rs
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/src/: lib.rs
crates/core/tests/: git.rs  projects.rs
crates/desktop/: CHANGELOG.md  Cargo.toml  build.rs  tauri.conf.json
crates/desktop/capabilities/: default.json
crates/desktop/src/: lib.rs  main.rs
crates/desktop/ui/: index.html  main.js  package-lock.json  package.json  style.css
crates/desktop/ui/src/: main.js
