[workspace]
members = ["crates/core", "crates/cli", "crates/desktop"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["David Gray <davidgraymi@gmail.com>"]
license = "MIT"
repository = "https://github.com/davidgraymi/nannou-manager"
homepage = "https://github.com/davidgraymi/nannou-manager"
