[package]
name = "nannou-manager-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for managing nannou projects"

[[bin]]
name = "nou"
path = "src/main.rs"

[dependencies]
nannou-manager-core = { path = "../core", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"
