[package]
name = "nannou-manager-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for managing nannou projects"

[[bin]]
name = "nou"
path = "src/main.rs"

[features]
# Headless by default so `cargo install nannou-manager-cli` always builds
# (no Tauri / system webview deps). Opt into the GUI with `--features desktop`;
# distribution packages (e.g. the Homebrew cask) build with it enabled.
default = []
desktop = ["dep:nannou-manager-desktop"]

[dependencies]
nannou-manager-core = { path = "../core", version = "0.1.1" }
nannou-manager-desktop = { path = "../desktop", version = "0.1.1", optional = true }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"
