[package]
name = "nannou-manager-desktop"
version = "0.1.0"
edition = "2021"
description = "Tauri desktop app for managing nannou projects"

[dependencies]
nannou-manager-core = { path = "../core" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
