[package]
name = "nannou-manager-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tauri desktop app for managing nannou projects"

[dependencies]
nannou-manager-core = { path = "../core", version = "0.1.2" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
